# claude-code-usage-bar

./: README.md  install.ps1  install.sh  pyproject.toml  uninstall.sh  web-install.sh
src/claude_statusbar/: __init__.py  cli.py  statusbar.py  update_usage.py
