[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-statusbar"
version = "2.0.0"
authors = [
    {name = "leeguooooo", email = "leeguooooo@gmail.com"}
]
description = "Status bar for Claude Code subscription usage - shows model, session/weekly limits and reset times"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
keywords = ["claude", "claude-code", "ai", "monitoring", "statusbar", "subscription", "usage"]

dependencies = []

[project.urls]
Homepage = "https://github.com/takitani/claude-code-usage-bar"
Repository = "https://github.com/takitani/claude-code-usage-bar"
Issues = "https://github.com/takitani/claude-code-usage-bar/issues"

[project.scripts]
claude-statusbar = "claude_statusbar.cli:main"
claude-usage-update = "claude_statusbar.update_usage:main"
cstatus = "claude_statusbar.cli:main"
cs = "claude_statusbar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_statusbar = ["*.py"]
